crates/stef-parser/tests/snapshots/parser__print@enum_min_ws.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap()"
input_file: crates/stef-parser/tests/inputs/enum_min_ws.stef
---
enum Sample<T> {
    One @1,
    Two(u32 @1, u64 @2, T @3) @2,
    Three {
        field1: u32 @1,
        field2: bool @2,
        field3: T @3,
    } @3,
}


