crates/stef-parser/tests/snapshots/parser__print@import-basic.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap()"
input_file: crates/stef-parser/tests/inputs/import-basic.stef
---
use other::schema::Sample;
use second::submodule;

