crates/stef-parser/tests/snapshots/parser__print@import_basic.stef.snap
---
source: crates/stef-parser/tests/parser.rs
description: "use other::schema::Sample;\nuse second::submodule;"
input_file: crates/stef-parser/tests/inputs/import_basic.stef
---
use other::schema::Sample;
use second::submodule;

