crates/stef-parser/tests/snapshots/parser__print@module_basic.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap()"
input_file: crates/stef-parser/tests/inputs/module_basic.stef
---
mod a {
    /// Inner module
    mod b {
        enum Sample {
            One @1,
        }
    }

    struct Sample {
        value: u32 @1,
    }
}


