crates/stef-parser/tests/snapshots/parser__print@schema_basic.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap()"
input_file: crates/stef-parser/tests/inputs/schema_basic.stef
---
/// Basic struct.
struct SampleStruct {
    a: u32 @1,
    b: bool @2,
}

/// Sample enum.
enum SampleEnum {
    One @1,
    Two(u32 @1, u64 @2) @2,
    Three {
        field1: u32 @1,
        field2: bool @2,
    } @3,
}


