crates/stef-parser/tests/snapshots/parser__print@struct-generics.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap()"
input_file: crates/stef-parser/tests/inputs/struct-generics.stef
---
/// Generic key-value pair.
struct KeyValue<K, V> {
    key: K @1,
    value: V @2,
}


